test/src/e2e_vm_tests/test_programs/should_pass/dump_impls_struct/src/lib.sw
library;

struct MyStruct {

}

trait MyTrait {

}

impl MyTrait for MyStruct {}
