test/src/e2e_vm_tests/test_programs/should_fail/language/references/impl_reference_types/src/ref_and_ref_mut_trait_impls.sw
library;

struct S<T> { }

trait Trait { }

impl<A> Trait for &S<A> { }
impl<B> Trait for &S<B> { }

impl<A> Trait for &mut S<A> { }
impl<B> Trait for &mut S<B> { }

impl<A> Trait for & &S<A> { }
impl<B> Trait for & &S<B> { }

impl<A> Trait for &mut &mut S<A> { }
impl<B> Trait for &mut &mut S<B> { }

impl<A> Trait for & & &S<A> { }
impl<B> Trait for & & &S<B> { }

impl<A> Trait for &mut &mut &mut S<A> { }
impl<B> Trait for &mut &mut &mut S<B> { }

impl<A> Trait for &mut & &mut S<A> { }
impl<B> Trait for &mut & &mut S<B> { }